@@ -20,6 +20,7 @@ package com.exedio.cope;
 
 import gnu.trove.TIntObjectHashMap;
 
+import java.lang.annotation.Annotation;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -48,14 +49,44 @@ public final class EnumField<E extends Enum<E>> extends FunctionField<E>
 			throw new RuntimeException("must have at least one enum value: " + valueClass);
 		final int[] ordinalsToNumbers = new int[enumConstants.length];
 		
+		int schemaValue = 0;
 		for(final E e : enumConstants)
 		{
-			final int number = (e.ordinal() + 1) * 10;
+			final CopeSchemaValue annotation = getAnnotation(e, CopeSchemaValue.class);
+			final int number = annotation!=null ? annotation.value() : (schemaValue+=10);
 			values.add(e);
 
 			if(numbersToValues.put(number, e)!=null)
 				throw new RuntimeException("duplicate number " + number + " for enum field on " + valueClass);
 			ordinalsToNumbers[e.ordinal()] = number;
+		}
+		final int l = ordinalsToNumbers.length-1;
+		int i = 0;
+		for(final E e : values)
+		{
+			if(getAnnotation(e, CopeSchemaValue.class)!=null)
+			{
+				if((i>0 && ordinalsToNumbers[i]<=ordinalsToNumbers[i-1]) ||
+					(i<l && ordinalsToNumbers[i]>=ordinalsToNumbers[i+1]))
+				{
+					final StringBuilder bf = new StringBuilder();
+					bf.append(valueClass.getName()).
+						append(": @CopeSchemaValue for ").
+						append(e.name()).
+						append(" must be");
+					if(i>0)
+						bf.append(" greater than ").append(ordinalsToNumbers[i-1]);
+					if(i>0 && i<ordinalsToNumbers.length-1)
+						bf.append(" and");
+					if(i<ordinalsToNumbers.length-1)
+						bf.append(" less than ").append(ordinalsToNumbers[i+1]);
+					bf.append(", but was ").
+						append(ordinalsToNumbers[i]).
+						append('.');
+					throw new IllegalArgumentException(bf.toString());
+				}
+			}
+			i++;
 		}
 		values.trimToSize();
 		numbersToValues.trimToSize();
@@ -64,6 +95,18 @@ public final class EnumField<E extends Enum<E>> extends FunctionField<E>
 		this.ordinalsToNumbers = ordinalsToNumbers;
 		
 		checkDefaultConstant();
+	}
+	
+	private static final <T extends Annotation> T getAnnotation(final Enum e, Class<T> annotationClass)
+	{
+		try
+		{
+			return e.getDeclaringClass().getField(e.name()).getAnnotation(annotationClass);
+		}
+		catch(NoSuchFieldException ex)
+		{
+			throw new RuntimeException(ex);
+		}
 	}
 	
 	EnumField(final Class<E> valueClass)
