@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* add @CopeSchemaValue for enum values
 * add ItemCacheInfo.getConcurrentLoads()
 	replaces message on System.out: warning: duplicate computation of state ...
 * add SchemaInfo.quoteName
